api/k8s/beta.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screen-beta-api-deployment
  labels:
    app: screen-beta-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: screen-beta-api
  template:
    metadata:
      labels:
        app: screen-beta-api
    spec:
      containers:
      - name: screen-beta-api
        image: gcr.io/devenv-215523/screen-api:${SERVICE_VERSION}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=devenv-215523:us-east1:screen-v13-db=tcp:5432",
                  "-credential_file=/secrets/cloudsql/staging-service-account.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
          - name: service-account-key
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: service-account-key
          secret:
            secretName: service-account-key
---
apiVersion: v1
kind: Service
metadata:
  name: screen-beta-api-service
  labels:
    app: screen-beta-api
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: screen-beta-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: screen-beta-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "screen-beta-api-external-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "screen-beta-api-cert"
spec:
  backend:
    serviceName: screen-beta-api-service
    servicePort: 80
